--- a/GoIT/markup/home/lesson1/5 dz Cadastre( not flexible)/index.html
+++ b/GoIT/markup/home/lesson1/5 dz Cadastre( not flexible)/index.html
@@ -37,40 +37,42 @@
 	<div class="centerBlock">
 		<div class="conteiner">
 			<div class="centerBlock__black">
-				<div><header class="blackHead__name">Cadastre-se</header></div>
-				<div class="blackSmall">
-					<a href="#" class="blackSmall__link"><img src="img/Facebook.png" alt=""></a>
-					<div class="blackSmall__ou">
-							<div class="smallLine"></div> 
-							<div class="smallText">OU</div>
-							<div class="smallLine"></div>
+				<div class="small1"><header class="blackHead__name">Cadastre-se</header></div>
+				<div class="small2">
+					<div class="blackSmall">
+						<a href="#" class="blackSmall__link"><img src="img/Facebook.png" alt=""></a>
+						<div class="blackSmall__ou">
+								<div class="smallLine"></div> 
+								<div class="smallText">OU</div>
+								<div class="smallLine"></div>
+						</div>
+							<form action="#">
+								<div class="form__line  indent1 ">
+									<input type="text" name="firstName" class="form__line1 line_active" placeholder="First Name">
+								</div>
+								<div class="form__line  indent2 ">
+									<input type="text" name="lastName" class="form__line1 line_active" placeholder="Last Name">
+								</div>
+								<div class="form__line  indent2 ">
+									<input type="email" name="emailAdress" class="form__line1 line_active" placeholder="Email Adress">
+								</div>
+								<div class="form__line  indent3 ">
+									<input type="password" name="password" class="form__line1 line_active" placeholder="Choose Password">
+								</div>
+								<div class="form__line  indent4 ">
+									<input type="password" name="passwordConfirm" class="form__line1 line_active" placeholder="Password Confirm">
+								</div>
+								<div class="form__line indent4">
+									<label><input type="checkbox" name="sendMe" class="checkbox__indent"> <span class="checkbox__text">Send me Youbike updates and tips</span> </label>
+								</div>
+								<div class="form__line">
+									<input type="submit" value="Create my Account" class="button__create">
+								</div>
+							</form>
 					</div>
-						<form action="#">
-							<div class="form__line  indent1 ">
-								<input type="text" name="firstName" class="form__line1 line_active" placeholder="First Name">
-							</div>
-							<div class="form__line  indent2 ">
-								<input type="text" name="lastName" class="form__line1 line_active" placeholder="Last Name">
-							</div>
-							<div class="form__line  indent2 ">
-								<input type="email" name="emailAdress" class="form__line1 line_active" placeholder="Email Adress">
-							</div>
-							<div class="form__line  indent3 ">
-								<input type="password" name="password" class="form__line1 line_active" placeholder="Choose Password">
-							</div>
-							<div class="form__line  indent4 ">
-								<input type="password" name="passwordConfirm" class="form__line1 line_active" placeholder="Password Confirm">
-							</div>
-							<div class="form__line indent4">
-								<label><input type="checkbox" name="sendMe" class="checkbox__indent"> <span class="checkbox__text">Send me Youbike updates and tips</span> </label>
-							</div>
-							<div class="form__line">
-								<input type="submit" value="Create my Account" class="button__create">
-							</div>
-						</form>
-				</div>
-				<div class="centerBlock__footer">
-					<p class="footer__text">By clicking the button above, you agree to the Terms of Service Xiew our Privacy Policy.</p>
+					<div class="centerBlock__footer">
+						<p class="footer__text">By clicking the button above, you agree to the Terms of Service Xiew our Privacy Policy.</p>
+					</div>
 				</div>
 			</div>
 		</div>
