--- a/GoIT/markup/home/lesson1/5 dz Cadastre( not flexible)/index.html
+++ b/GoIT/markup/home/lesson1/5 dz Cadastre( not flexible)/index.html
@@ -40,7 +40,12 @@
 				<div class="small1"><header class="blackHead__name">Cadastre-se</header></div>
 				<div class="small2">
 					<div class="blackSmall">
-						<a href="#" class="blackSmall__link"><img src="img/Facebook.png" alt=""></a>
+						<a href="#" class="blackSmall__link">
+							<img src="img/F-book.png" alt="" class="link__F-book">
+							<div class="link__LogIn">
+								<span class="logIn_bold logIn__indent1">Log In</span> with <span class="logIn_bold">Facebook</span><span class="logIn_bold logIn__indent2">&gt;</span>
+							</div>
+						</a>
 						<div class="blackSmall__ou">
 								<div class="smallLine"></div> 
 								<div class="smallText">OU</div>
