--- a/GoIT/javascript/home/lesson1/dz_15-16  api request/index.html
+++ b/GoIT/javascript/home/lesson1/dz_15-16  api request/index.html
@@ -6,7 +6,7 @@
 	<!-- script jquery -->
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
-     <!-- script for template -->
+     <!-- script js-->
     <script src="js/script1.js"></script>
 	<title></title>
 </head>
