--- a/GoIT/javascript/home/lesson1/dz_15-16  request/index.html
+++ b/GoIT/javascript/home/lesson1/dz_15-16  request/index.html
@@ -7,7 +7,7 @@
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
      <!-- script js-->
-    <script src="js/script1.js"></script>
+    <script src="js/script.js"></script>
 	<title></title>
 </head>
 <body>
