--- a/GoIT/javascript/home/lesson1/dz_19-20 1_task(page)/index.html
+++ b/GoIT/javascript/home/lesson1/dz_19-20 1_task(page)/index.html
@@ -19,24 +19,23 @@
 <body>
 	<!-- part 1 -->
 	<div class="conteiner1">
-		<div class="conteiner1__header">											<!-- элемент место-->
-			<div class="header clearfix">													<!-- блок-->
+		<div class="conteiner1__header">											
+			<div class="header clearfix">													
 				<!-- logo -->
-				<div class="header__logo">										<!-- элемент место-->
-					<div class="logo">											<!-- блок-->
-						<a class="logo__link" href="#">					<!-- ат.элемент-->
+				<div class="header__logo">										
+					<div class="logo">											
+						<a class="logo__link" href="#">					
 							<img class="logo__img" src="img/logo_build.jpg" alt="">
 							<div class="logo__text">
 								<p class="logo__span1">Build Home</p>
 								<p class="logo__span2">INDUSTRIAL THEME</p>
 							</div>
-										<!-- ат.элемент-->
 						</a>
 					</div>
 				</div>
 				<!-- soc.batton -->
-				<div class="header__batton">										<!-- элемент место-->
-					<div class="batton">											<!-- блок-->
+				<div class="header__batton">										
+					<div class="batton">										
 						<a class="batton__link batton_1" href="#"></a>
 						<a class="batton__link batton_2" href="#"></a>
 						<a class="batton__link batton_3" href="#"></a>
@@ -47,22 +46,22 @@
 			</div>
 		</div>
 		<!-- header menu -->
-		<div class="conteiner1__menu">												<!-- элемент место-->
-			<ul class="menu">														<!-- блок-->
-				<li class="menu__item menu__item_home">											<!-- ат.элемент-->
-					<a href="#" class="menu__link ">HOME</a>						<!-- ат.элемент-->
+		<div class="conteiner1__menu">												
+			<ul class="menu">														
+				<li class="menu__item menu__item_home">											
+					<a href="#" class="menu__link ">HOME</a>						
 				</li>
-				<li class="menu__item">											<!-- ат.элемент-->
-					<a href="#" class="menu__link">FEATURES</a>					<!-- ат.элемент-->
+				<li class="menu__item">											
+					<a href="#" class="menu__link">FEATURES</a>					
 				</li>
-				<li class="menu__item">											<!-- ат.элемент-->
-					<a href="#" class="menu__link">SERVICES</a>					<!-- ат.элемент-->
+				<li class="menu__item">											
+					<a href="#" class="menu__link">SERVICES</a>					
 				</li>
-				<li class="menu__item">											<!-- ат.элемент-->
-					<a href="#" class="menu__link">NEWS</a>				<!-- ат.элемент-->
+				<li class="menu__item">											
+					<a href="#" class="menu__link">NEWS</a>				
 				</li>
-				<li class="menu__item">											<!-- ат.элемент-->
-					<a href="#" class="menu__link">SHOP</a>					<!-- ат.элемент-->
+				<li class="menu__item">											
+					<a href="#" class="menu__link">SHOP</a>					
 				</li>
 				<li class="menu__item menu__item_form">
 					<form action="" class="menu__form">
@@ -73,8 +72,9 @@
 			</ul>
 		</div>
 		<!-- banner -->
-		<div class="conteiner1__banner">											<!-- элемент место-->
-			<div class="banner">												<div class="jcarousel-wrapper">
+		<div class="conteiner1__banner">											
+			<div class="banner">												
+				<div class="jcarousel-wrapper">
                		<div class="jcarousel">
                    		<ul>
                         	<li><img src="img/carousel.jpg" width="1160" height="470" alt=""></li>
@@ -89,17 +89,17 @@
 		<!-- offers -->
 		<div class="conteiner1__offers">
 			<div class="offers clearfix">
-				<div class="offers__offer offers__offer_non">										<!-- элемент место-->
-					<div class="offer offer_non clearfix">											<!-- блок-->
+				<div class="offers__offer offers__offer_non">									
+					<div class="offer offer_non clearfix">										
 						<div class="offer__number">
 							<div class="number">01</div>
-						</div>				<!-- ат.элемент-->
-						<div class="offer__block"><!-- элемент место-->
+						</div>				
+						<div class="offer__block">
 							<div class="block">
-								<div class="block__img block__img_1"></div>					<!-- ат.элемент-->
+								<div class="block__img block__img_1"></div>					
 								<header class="block__header">Power Inside</header>
-								<p class="block__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique </p><!-- ат.элемент-->
-								<a class="block__link" href="#">							<!-- ат.элемент-->
+								<p class="block__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique </p>
+								<a class="block__link" href="#">							
 									<p class="link__more">Read More</p>
 									<div class="link__arrow"></div>
 								</a>
@@ -107,17 +107,17 @@
 						</div>
 					</div>
 				</div>
-				<div class="offers__offer">										<!-- элемент место-->
-					<div class="offer clearfix">											<!-- блок-->
+				<div class="offers__offer">										
+					<div class="offer clearfix">											
 						<div class="offer__number">
 							<div class="number">02</div>
-						</div>				<!-- ат.элемент-->
-						<div class="offer__block"><!-- элемент место-->
+						</div>				
+						<div class="offer__block">
 							<div class="block">
-								<div class="block__img block__img_2"></div>					<!-- ат.элемент-->
+								<div class="block__img block__img_2"></div>					
 								<header class="block__header">New Technologies</header>
-								<p class="block__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique </p><!-- ат.элемент-->
-								<a class="block__link" href="#">							<!-- ат.элемент-->
+								<p class="block__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique </p>
+								<a class="block__link" href="#">						
 									<p class="link__more">Read More</p>
 									<div class="link__arrow"></div>
 								</a>
@@ -125,17 +125,17 @@
 						</div>
 					</div>
 				</div>
-				<div class="offers__offer">										<!-- элемент место-->
-					<div class="offer clearfix">											<!-- блок-->
+				<div class="offers__offer">									
+					<div class="offer clearfix">											
 						<div class="offer__number">
 							<div class="number">03</div>
-						</div>				<!-- ат.элемент-->
-						<div class="offer__block"><!-- элемент место-->
+						</div>				
+						<div class="offer__block">
 							<div class="block">
-								<div class="block__img block__img_3"></div>					<!-- ат.элемент-->
+								<div class="block__img block__img_3"></div>					
 								<header class="block__header">Fast Support</header>
-								<p class="block__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique </p><!-- ат.элемент-->
-								<a class="block__link" href="#">							<!-- ат.элемент-->
+								<p class="block__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique </p>
+								<a class="block__link" href="#">						
 									<p class="link__more">Read More</p>
 									<div class="link__arrow"></div>
 								</a>
@@ -148,16 +148,16 @@
 	</div>
 	<!-- part 2 -->
 	<div class="conteiner2">
-		<div class="conteiner2__services">											<!-- элемент место-->
-			<div class="services clearfix">													<!-- блок-->
-				<div class="services__namePart">										<!-- элемент место-->
-					<div class="namePart">											<!-- блок-->
-						<a class="namePart__link" href="#">					<!-- ат.элемент-->
-							Our Services		<!-- ат.элемент-->
+		<div class="conteiner2__services">								
+			<div class="services clearfix">													
+				<div class="services__namePart">										
+					<div class="namePart">											
+						<a class="namePart__link" href="#">					
+							Our Services		
 						</a>
 					</div>
 				</div>
-				<div class="services__imgPart services__imgPart_n"><!-- элемент место-->
+				<div class="services__imgPart services__imgPart_n">
 					<a class="imgPart">
 						<div class="imgPart__img imgPart__img_1"></div>
 						<p class="imgPart__link" href="#">						
@@ -165,7 +165,7 @@
 						</p>
 					</a>
 				</div>
-				<div class="services__imgPart"><!-- элемент место-->
+				<div class="services__imgPart">
 					<a class="imgPart">
 						<div class="imgPart__img imgPart__img_2"></div>				
 						<p class="imgPart__link" href="#">							
@@ -173,7 +173,7 @@
 						</p>
 					</a>
 				</div>
-				<div class="services__imgPart"><!-- элемент место-->
+				<div class="services__imgPart">
 					<a class="imgPart">
 						<div class="imgPart__img imgPart__img_3"></div>				
 						<p class="imgPart__link" href="#">				
@@ -181,7 +181,7 @@
 						</p>
 					</a>
 				</div>
-				<div class="services__imgPart"><!-- элемент место-->
+				<div class="services__imgPart">
 					<a class="imgPart">
 						<div class="imgPart__img imgPart__img_4"></div>					
 						<p class="imgPart__link" href="#">				
