--- a/GoIT/javascript/home/lesson1/do_not_check/index.html
+++ b/GoIT/javascript/home/lesson1/do_not_check/index.html
@@ -3,13 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
+
 	<!--[if lt IE 9]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="styles/style.css">
-	<link rel="stylesheet" href="css/ie_style.css">
+	<!--[if lt IE 8]>  <link rel="stylesheet" href="css/ie_style.css">	
+	<link rel="stylesheet" href="css/my_ie_style.css"> <![endif]-->
 	<link rel="stylesheet" type="text/css" href="css/jcarousel.transitions.css">
 	<title>Holiday dreams</title>
 </head>
