--- a/GoIT/javascript/home/lesson1/do_not_check/index.html
+++ b/GoIT/javascript/home/lesson1/do_not_check/index.html
@@ -9,11 +9,17 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
+
+	<!--[if !lt IE 9]><!-->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="styles/style.css">
-	<!--[if lt IE 8]>  <link rel="stylesheet" href="css/ie_style.css">	
-	<link rel="stylesheet" href="css/my_ie_style.css"> <![endif]-->
 	<link rel="stylesheet" type="text/css" href="css/jcarousel.transitions.css">
+	<!--<![endif]-->
+
+	<!--[if lt IE 9 ]> <link rel="stylesheet" href="css/ie_style.css"><![endif]-->
+	<!--[if lt IE 9 ]>  <link rel="stylesheet" href="css/my_ie_style.css"><![endif]-->
+	
+
 	<title>Holiday dreams</title>
 </head>
 <body>
@@ -53,8 +59,8 @@
                 		<div class="jcarousel">
                     		<ul class="jcarousel__sliders">
                         		<li style="background: url('img/step__1.jpg');"></li>
-                        		<li style="background: url('img/step__1.jpg');"></li>
-                        		<li style="background: url('img/step__1.jpg');"></li>
+                        		<li class="sliders__item" style="background: url('img/step__1.jpg');"></li>
+                        		<li class="sliders__item" style="background: url('img/step__1.jpg');"></li>
                     		</ul>
                 		</div>
                 		<div class="photo-credits">
@@ -69,8 +75,8 @@
                 		<div class="jcarousel">
                     		<ul>
                         		<li style="background: url('img/step__2.jpg');"></li>
-                        		<li style="background: url('img/step__2.jpg');"></li>
-                        		<li style="background: url('img/step__2.jpg');"></li>
+                        		<li class="sliders__item" style="background: url('img/step__2.jpg');"></li>
+                        		<li class="sliders__item" style="background: url('img/step__2.jpg');"></li>
                     		</ul>
                 		</div>
                 		<div class="photo-credits">
@@ -85,8 +91,8 @@
                 		<div class="jcarousel">
                     		<ul>
                         		<li style="background: url('img/step__3.jpg');"></li>
-                        		<li style="background: url('img/step__3.jpg');"></li>
-                        		<li style="background: url('img/step__3.jpg');"></li>
+                        		<li class="sliders__item" style="background: url('img/step__3.jpg');"></li>
+                        		<li class="sliders__item" style="background: url('img/step__3.jpg');"></li>
                     		</ul>
                 		</div>
                 		<div class="photo-credits">
@@ -100,7 +106,7 @@
 				</div>
 			</section>
 			<!-- block__partners -->
-			<section class="block__partners">
+			<div class="block__partners">
 				<header class="works__topic">
 					<h1 class="topic_line">Meet a partner for your best holiday</h1>
 				</header>
@@ -137,7 +143,7 @@
 					</div>
 				</div>
 				<a href="#" class="partners__other">See other partners</a>
-			</section>
+			</div>
 			<!-- block__ideas -->
 			<section class="block__findImg">
 				<div class="block__ideas">
@@ -179,16 +185,26 @@
 	</footer>
 
 
-	<script src="js/es-shims.js"></script>
+
 	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
     <!--  masonry-->
- 	<script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
-   	<script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
+<!--[if !lt IE 9]><!-->
+	<script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
+	<script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
+<!--<![endif]-->
+
+ 	
+ 	<!--[if lt IE 9]>  
+ 	<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.2/masonry.pkgd.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.2.0/imagesloaded.pkgd.min.js"></script>
+ 	 <![endif]-->
+   
     <!--  Carousel -->
 	<script type="text/javascript" src="js/modernizr.js"></script>
 	<script type="text/javascript" src="js/jquery.jcarousel.min.js"></script>
     <script type="text/javascript" src="js/jcarousel.transitions.js"></script>
    	<script src="js/searchIdeas.js"></script>
+   		<script src="js/es-shims.js"></script>
 </body>
 </html>
